# Observer-Crypto-Back

./: .gitmodules  CMakeLists.txt  README.md  core.cpp  script.cpp
include/: includes.h
source/: CMakeLists.txt
source/file_generator/: file_generator.cpp  file_generator.h
source/tests/test_file_generator/: test_file_generator.cpp  test_file_generator.h
source/tests/validator_test/: validator_test.cpp
source/validation/: validator.cpp  validator.h
src/: CMakeLists.txt
src/dataStruct/: DataStruct.h
src/interface/: FifoInterface.h
src/interface/DataParser/: DataParser.cpp  DataParser.h
src/interface/FileDataParser/: FileNameParser.cpp  FileNameParser.h
src/interface/FileNameInterface/: FileNameInterface.cpp  FileNameInterface.h
src/interface/initInterface/: InitInterface.cpp  InitInterface.h
src/tests/TestDataGenerator/: TestDataGenerator.cpp  TestDataGenerator.h
src/tests/TestValidator/: TestValidator.cpp
src/validation/: Validator.cpp  Validator.h
